Remove vagrant in favor of plain vbox
Still not working but removing vagrant HN in order to have simple
scripts using vboxmanage.

--- a/tox.ini
+++ b/tox.ini
@@ -24,4 +24,4 @@ commands = bash -c "find {toxinidir}             \
 # E006 check for lines longer than 79 columns
 # E042 local declaration hides errors
 # E043 Arithmetic compound has inconsistent return semantics
-         -print0 | xargs -0 bashate -v -eE005,E006,E042,E043"
+         -print0 | xargs -0 bashate -v -iE006 -eE005,E042,E043"
